--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ font-size:20px;
                 color:green;
                 }
 .home{
-    background-image: url(img/sailboat.jpg);
+    background-image: url(sailboat.jpg);
     background-size: 100% 100%;
     height: 100vh;
     overflow: auto;
